# mini_rag

./: .gitignore  pyproject.toml
cache/: chunks_info.json
chunks/: doc_116eac9f04_11_art.txt  doc_116eac9f04_12_art.txt  doc_116eac9f04_13_art.txt  doc_116eac9f04_16_art.txt  doc_116eac9f04_17_art.txt  doc_116eac9f04_18_art.txt  doc_116eac9f04_20_art.txt  doc_116eac9f04_22_art.txt  doc_116eac9f04_24_art.txt  doc_116eac9f04_25_art.txt  doc_116eac9f04_27_art.txt  doc_116eac9f04_3_art.txt  doc_116eac9f04_4_art.txt  doc_116eac9f04_6_art.txt  doc_116eac9f04_9_art.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_0_art.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_0_rozdzial.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_100_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_101_punkt_punkt_numeryczny.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_102_punkt_punkt_numeryczny.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_103_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_104_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_105_punkt_punkt_numeryczny.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_106_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_107_punkt_punkt_numeryczny.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_108_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_109_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_10_art.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_10_punkt_punkt_numeryczny.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_110_punkt_literowy_punkt.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_111_art.txt  doc_hash_6aac8bc98e68921990ad1e5ccdf85668_112_punkt_punkt_numeryczny.txt  (+255 more)
examples/: basic_usage.py
(+41 files in other folders)
