[project]
name = "mini-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "gmarcinek",email = "grzegorz.marcinek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.2",
    "numpy>=1.24.0",
    "requests>=2.31.0"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"